tests/error/inout_errors/nonlinear.err
Error: Invalid annotation (at $FILE:7:16)
  | 
5 | 
6 | @guppy.declare
7 | def foo(x: int @owned) -> qubit: ...
  |                 ^^^^^ Classical type `int` cannot be owned

Guppy compilation failed due to 1 previous error
